# EZCTF

./: .gitignore  README.md  README_zh.md  run.sh  stop.sh
backend/: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
backend/challenges/cookie/chall/: flag.txt
backend/challenges/ezweb/: Dockerfile  docker-compose.yml  index.html  shutdown_script.sh
backend/challenges/signin/chall/: flag.txt
backend/src/: main.py
backend/src/common/: security.py
backend/src/conf/: config.py  db.py
backend/src/conf/alembic/: env.py  script.py.mako
backend/src/conf/alembic/versions/: 44a4c89fd574_initial_migration.py
backend/src/message/: model.py
backend/src/middleware/: auth.py
backend/src/task/: model.py  router.py  schema.py  service.py
backend/src/team/: model.py  router.py  schema.py  service.py
backend/src/tests/: conftest.py  test_ranking.py  test_task.py  test_team.py  test_user.py
backend/src/user/: deps.py  model.py  router.py  schema.py  service.py
docs/design/: 数据库设计.md
ezctf.top/ezctf/: .gitignore  run.sh
ezctf.top/ezctf/src/: App.vue
frontend/: .env  README.md  package-lock.json  package.json  run.sh  vue.config.js
frontend/src/: main.js
frontend/src/UserSystemApi/: MessageApi.js  TeamApi.js  UserApi.js
frontend/src/components/: AcceptInvitation.vue  Banner.vue  ChangeLeader.vue  ChangeTeamname.vue  CreateAvatar.vue  DeleteTeam.vue  DeleteUser.vue  ForgetPassword.vue  InfoBoard.vue  InviteMember.vue  KickMember.vue  Login.vue  ModifyUser.vue  Navigation.vue  Notice.vue  Popup.vue  Question.vue  Registration.vue
(+18 files in other folders)
