[project]
name = "ezctf-backend"
version = "0.1.0"
description = "EZCTF Backend Refactored with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.112.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.6.3",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/conf", "src/message", "src/task", "src/team", "src/user"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
cache_dir = "output/.pytest_cache"
